--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'com.datastax.oss:java-driver-core:4.15.0'
 }
 
 application {
