--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'resourcemanager.App'
+    mainClass = 'com.tomcoward.heterogeneousfaas.resourcemanager.App'
 }
 
 tasks.named('test') {
