--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -7,12 +7,11 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
+    // Use Maven Central for resolving dependencies
     mavenCentral()
 }
 
@@ -21,11 +20,11 @@ dependencies {
 
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'javax.json:javax.json-api:1.1.4'
-    implementation 'com.datastax.oss:java-driver-core:4.15.0'
+    implementation 'org.apache.hbase:hbase:2.5.1'
+    implementation 'org.apache.hbase:hbase-client:2.4.13'
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'com.tomcoward.heterogeneousfaas.resourcemanager.App'
 }
 
