--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -22,6 +22,10 @@ dependencies {
     implementation 'javax.json:javax.json-api:1.1.4'
     implementation 'com.datastax.oss:java-driver-core:4.15.0'
     implementation 'com.datastax.oss:java-driver-query-builder:4.15.0'
+    implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
+    implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
+
+    annotationProcessor group: 'com.datastax.oss', name: 'java-driver-mapper-processor', version: '4.15.0'
 }
 
 application {
