--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -24,8 +24,10 @@ dependencies {
     implementation 'com.datastax.oss:java-driver-query-builder:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
+    implementation 'software.amazon.awssdk:lambda:2.18.24'
 
     annotationProcessor group: 'com.datastax.oss', name: 'java-driver-mapper-processor', version: '4.15.0'
+    implementation 'com.google.guava:guava:31.1-jre'
 }
 
 application {
