add Kubernetes client

--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
     implementation 'software.amazon.awssdk:lambda:2.18.24'
+    implementation 'io.kubernetes:client-java:15.0.1'
 
     annotationProcessor group: 'com.datastax.oss', name: 'java-driver-mapper-processor', version: '4.15.0'
     implementation 'com.google.guava:guava:31.1-jre'
