--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
     implementation 'com.google.guava:guava:31.1-jre'
-    implementation 'software.amazon.awssdk:ecs:2.18.24'
+    implementation 'software.amazon.awssdk:lambda:2.19.21'
     implementation 'io.kubernetes:client-java:15.0.1'
     implementation 'com.google.code.gson:gson:2.10.1'
 
