--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'org.glassfish:javax.json:1.1.4'
     implementation 'com.datastax.oss:java-driver-core:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
     implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
@@ -25,6 +26,8 @@ dependencies {
     implementation 'software.amazon.awssdk:lambda:2.19.21'
     implementation 'io.kubernetes:client-java:15.0.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'software.amazon.awssdk:iam:2.19.24'
 
     annotationProcessor group: 'com.datastax.oss', name: 'java-driver-mapper-processor', version: '4.15.0'
     runtimeOnly group: 'com.datastax.oss', name: 'java-driver-mapper-runtime', version: '4.15.0'
