--- a/project-codenet/functions/Python/s103878717/Dockerfile
+++ b/project-codenet/functions/Python/s103878717/Dockerfile
@@ -1,10 +1,7 @@
 FROM public.ecr.aws/lambda/python:3.8
 
-# Set the working directory to /app
-WORKDIR /app
-
 # Copy application code into the container
-COPY . .
+COPY . ${LAMBDA_TASK_ROOT}
 
 # Set the command to be run when the container starts
 CMD ["main.handler"]
