--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -10,6 +10,8 @@ plugins {
     id 'application'
 }
 
+apply plugin: 'java'
+
 repositories {
     // Use Maven Central for resolving dependencies
     mavenCentral()
