--- a/resource-manager/app/build.gradle
+++ b/resource-manager/app/build.gradle
@@ -22,14 +22,14 @@ dependencies {
     implementation 'javax.json:javax.json-api:1.1.4'
     implementation 'org.glassfish:javax.json:1.1.4'
     implementation 'com.datastax.oss:java-driver-core:4.15.0'
-    implementation 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
-    implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'software.amazon.awssdk:lambda:2.19.21'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'software.amazon.awssdk:iam:2.19.24'
     implementation 'io.fabric8:knative-client:6.4.1'
     implementation 'software.amazon.awssdk:ecr:2.19.33'
+    implementation 'com.datastax.oss:java-driver-mapper-runtime:4.15.0'
+    compileOnly 'com.datastax.oss:java-driver-mapper-processor:4.15.0'
 
     annotationProcessor group: 'com.datastax.oss', name: 'java-driver-mapper-processor', version: '4.15.0'
     runtimeOnly group: 'com.datastax.oss', name: 'java-driver-mapper-runtime', version: '4.15.0'
